package patterns.structural.decorator;

public class Marul extends Malzeme{
	public Marul(Tost tostMalzemeleri, String name, int price) {
		super(tostMalzemeleri, price, name);
	}
}
