package patterns.structural.decorator;

import java.util.List;

public interface Tost {
	
	public int fiyatHesapla();
	
	List<Malzeme> getMalzemeler();

}
